workloads/agents/openclaw/openclaw-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-over-tls-ingress
  namespace: openclaw
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`ssh.bapttf.com`)
      services:
        - name: openclaw-ssh
          port: 22
  tls: {}
